Fix profile spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .tutorials > ul {
   list-style: none;
-  margin: 4.5rem 0 1rem 0;
+  margin: 6rem 0 1rem 0;
   padding: 0;
 }
 .tutorial-listing {
